major overhaul to allow vqa, loc, and joint train

--- a/configs/joint_gt_layout.yaml
+++ b/configs/joint_gt_layout.yaml
@@ -1,6 +1,5 @@
 MODEL:
   BUILD_LOC: True
-  BUILD_VQA: False
   LOC_SCORES_POS_AFFINE: True
   BBOX_REG_AS_FCN: True
   CTRL:
@@ -15,10 +14,7 @@ MODEL:
     DESCRIBE_TWO:
       KEEP_STACK: True
 TRAIN:
-  USE_GT_LAYOUT: False
+  USE_GT_LAYOUT: True
   MAX_ITER: 200000
-
-  USE_SHARPEN_LOSS: True
-  SHARPEN_LOSS_WEIGHT: 1e-1
-  SHARPEN_SCHEDULE_BEGIN: 150000
-  SHARPEN_SCHEDULE_END: 160000
+  BBOX_IND_LOSS_WEIGHT: 0.5
+  BBOX_OFFSET_LOSS_WEIGHT: 0.5
