--- a/configs/joint_scratch.yaml
+++ b/configs/joint_scratch.yaml
@@ -1,6 +1,5 @@
 MODEL:
   BUILD_LOC: True
-  BUILD_VQA: False
   LOC_SCORES_POS_AFFINE: True
   BBOX_REG_AS_FCN: True
   CTRL:
@@ -17,6 +16,8 @@ MODEL:
 TRAIN:
   USE_GT_LAYOUT: False
   MAX_ITER: 200000
+  BBOX_IND_LOSS_WEIGHT: 0.5
+  BBOX_OFFSET_LOSS_WEIGHT: 0.5
 
   USE_SHARPEN_LOSS: True
   SHARPEN_LOSS_WEIGHT: 1e-1
