--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,8 @@ six==1.15.0
 starlette==0.13.6
 tifffile==2020.9.3
 https://download.pytorch.org/whl/cpu/torch-1.7.1%2Bcpu-cp36-cp36m-linux_x86_64.whl
-torchvision==0.8.2
+https://download.pytorch.org/whl/cpu/torchvision-0.8.2%2Bcpu-cp36-cp36m-linux_x86_64.whl
 tqdm==4.56.0
 typing-extensions==3.7.4.3
 urllib3==1.26.2
+uvicorn==0.13.3
