--- a/configs/joint_scratch.yaml
+++ b/configs/joint_scratch.yaml
@@ -19,6 +19,7 @@ TRAIN:
   MAX_ITER: 200000
   BBOX_IND_LOSS_WEIGHT: 0.5
   BBOX_OFFSET_LOSS_WEIGHT: 0.5
+  DROPOUT_KEEP_PROB: 1.0
 
   USE_SHARPEN_LOSS: True
   SHARPEN_LOSS_WEIGHT: 1e-1
