--- a/configs/vqa_scratch.yaml
+++ b/configs/vqa_scratch.yaml
@@ -13,6 +13,7 @@ MODEL:
 TRAIN:
   USE_GT_LAYOUT: False
   MAX_ITER: 200000
+  DROPOUT_KEEP_PROB: 1.0
 
   USE_SHARPEN_LOSS: True
   SHARPEN_LOSS_WEIGHT: 1e-1
