--- a/configs/joint_scratch.yaml
+++ b/configs/joint_scratch.yaml
@@ -14,6 +14,7 @@ MODEL:
       KEEP_STACK: True
     DESCRIBE_TWO:
       KEEP_STACK: True
+    VALIDATE_MODULES: False
 TRAIN:
   USE_GT_LAYOUT: False
   MAX_ITER: 200000
