--- a/configs/loc_gt_layout.yaml
+++ b/configs/loc_gt_layout.yaml
@@ -5,7 +5,7 @@ MODEL:
   LOC_SCORES_POS_AFFINE: True
   BBOX_REG_AS_FCN: True
   CTRL:
-    LINEAR_MODULE_WEIGHTS: True
+    LINEAR_MODULE_WEIGHTS: False
     USE_WORD_EMBED: True
   NMN:
     STACK:
